--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/google.maps": "^3.54.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -32,5 +33,9 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.34.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@googlemaps/extended-component-library": "^0.4.3",
+		"p-wait-for": "^5.0.2"
+	}
 }
