--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,10 @@
 	"devDependencies": {
 		"@googlemaps/extended-component-library": "^0.4.3",
 		"@playwright/test": "^1.28.1",
+		"@siemens/ix": "^2.0.3",
+		"@siemens/ix-icons": "^2.0.1",
 		"@smui/button": "^7.0.0-beta.15",
+		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/tab": "^7.0.0-beta.15",
 		"@smui/tab-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
