--- a/app/package.json
+++ b/app/package.json
@@ -18,22 +18,27 @@
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"devDependencies": {
+		"@andybeersdev/element-resize-detector": "^1.0.1",
 		"@googlemaps/extended-component-library": "^0.4.3",
 		"@playwright/test": "^1.28.1",
 		"@siemens/ix": "^2.0.3",
 		"@siemens/ix-icons": "^2.0.1",
 		"@smui/button": "^7.0.0-beta.15",
 		"@smui/dialog": "^7.0.0-beta.15",
+		"@smui/fab": "^7.0.0-beta.15",
+		"@smui/icon-button": "^7.0.0-beta.15",
 		"@smui/tab": "^7.0.0-beta.15",
 		"@smui/tab-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/element-resize-detector": "^1.1.5",
 		"@types/google.maps": "^3.54.3",
 		"@types/luxon": "^3.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"luxon": "^3.4.3",
 		"p-wait-for": "^5.0.2",
