sort place into routes

--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
 		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/fab": "^7.0.0-beta.15",
 		"@smui/icon-button": "^7.0.0-beta.15",
+		"@smui/list": "^7.0.0-beta.15",
 		"@smui/tab": "^7.0.0-beta.15",
 		"@smui/tab-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -34,6 +35,7 @@
 		"@types/element-resize-detector": "^1.1.5",
 		"@types/google.maps": "^3.54.3",
 		"@types/luxon": "^3.3.3",
+		"@types/uuid": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -49,6 +51,7 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"uuid": "^9.0.1",
 		"vite": "^4.4.2",
 		"vitest": "^0.34.6"
 	},
