--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@andybeersdev/element-resize-detector": "^1.0.1",
 		"@googlemaps/extended-component-library": "^0.4.3",
+		"@material/typography": "^14.0.0",
 		"@playwright/test": "^1.28.1",
 		"@siemens/ix": "^2.0.3",
 		"@siemens/ix-icons": "^2.0.1",
@@ -28,6 +29,7 @@
 		"@smui/fab": "^7.0.0-beta.15",
 		"@smui/icon-button": "^7.0.0-beta.15",
 		"@smui/list": "^7.0.0-beta.15",
+		"@smui/menu": "^7.0.0-beta.15",
 		"@smui/tab": "^7.0.0-beta.15",
 		"@smui/tab-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
