change DateTimePicker library to svelty-picker

--- a/app/package.json
+++ b/app/package.json
@@ -22,8 +22,6 @@
 		"@googlemaps/extended-component-library": "^0.4.3",
 		"@material/typography": "^14.0.0",
 		"@playwright/test": "^1.28.1",
-		"@siemens/ix": "^2.0.3",
-		"@siemens/ix-icons": "^2.0.1",
 		"@smui/button": "^7.0.0-beta.15",
 		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/fab": "^7.0.0-beta.15",
@@ -51,6 +49,7 @@
 		"smui-theme": "^7.0.0-beta.15",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelty-picker": "^5.2.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"uuid": "^9.0.1",
