--- a/app/package.json
+++ b/app/package.json
@@ -23,14 +23,18 @@
 		"@material/typography": "^14.0.0",
 		"@playwright/test": "^1.28.1",
 		"@smui/button": "^7.0.0-beta.15",
+		"@smui/chips": "^7.0.0-beta.15",
 		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/fab": "^7.0.0-beta.15",
+		"@smui/form-field": "^7.0.0-beta.15",
 		"@smui/icon-button": "^7.0.0-beta.15",
 		"@smui/list": "^7.0.0-beta.15",
 		"@smui/menu": "^7.0.0-beta.15",
+		"@smui/slider": "^7.0.0-beta.15",
 		"@smui/tab": "^7.0.0-beta.15",
 		"@smui/tab-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/element-resize-detector": "^1.1.5",
 		"@types/google.maps": "^3.54.3",
