--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
 		"@material/typography": "^14.0.0",
 		"@playwright/test": "^1.28.1",
 		"@smui/button": "^7.0.0-beta.15",
+		"@smui/checkbox": "^7.0.0-beta.15",
 		"@smui/chips": "^7.0.0-beta.15",
 		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/fab": "^7.0.0-beta.15",
