--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@andybeersdev/element-resize-detector": "^1.0.1",
+    "@faker-js/faker": "^8.3.1",
     "@googlemaps/extended-component-library": "^0.4.3",
+    "@googlemaps/jest-mocks": "^2.21.4",
     "@material/typography": "^14.0.0",
     "@playwright/test": "^1.28.1",
     "@smui/button": "^7.0.0-beta.15",
@@ -38,7 +40,8 @@
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/element-resize-detector": "^1.1.5",
-    "@types/google.maps": "^3.54.3",
+    "@types/google.maps": "^3.54.10",
+    "@types/jsdom": "^21.1.6",
     "@types/luxon": "^3.3.3",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -47,6 +50,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "jsdom": "^23.0.1",
     "luxon": "^3.4.3",
     "p-wait-for": "^5.0.2",
     "prettier": "^3.0.3",
