--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/its-succ/my-touring-links/issues"
   },
-  "homepage": "https://github.com/its-succ/my-touring-links#readme"
+  "homepage": "https://github.com/its-succ/my-touring-links#readme",
+  "scripts": {
+    "firebase": "firebase"
+  },
+  "devDependencies": {
+    "firebase-tools": "^13.0.2"
+  }
 }
