--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@firebase/rules-unit-testing": "^3.0.1",
     "@googlemaps/extended-component-library": "^0.4.3",
     "@googlemaps/jest-mocks": "^2.21.4",
+    "@macfja/svelte-persistent-store": "^2.4.1",
     "@material/typography": "^14.0.0",
     "@playwright/test": "^1.28.1",
     "@smui/button": "^7.0.0-beta.15",
@@ -36,12 +37,15 @@
     "@smui/icon-button": "^7.0.0-beta.15",
     "@smui/list": "^7.0.0-beta.15",
     "@smui/menu": "^7.0.0-beta.15",
+    "@smui/menu-surface": "^7.0.0-beta.15",
     "@smui/slider": "^7.0.0-beta.15",
     "@smui/tab": "^7.0.0-beta.15",
     "@smui/tab-bar": "^7.0.0-beta.15",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.20.4",
+    "@smui/top-app-bar": "^7.0.0-beta.15",
+    "@sveltejs/adapter-auto": "^3.1.0",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.3.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@types/element-resize-detector": "^1.1.5",
     "@types/google.maps": "^3.54.10",
     "@types/jsdom": "^21.1.6",
@@ -59,17 +63,16 @@
     "luxon": "^3.4.3",
     "p-wait-for": "^5.0.2",
     "prettier": "^3.0.3",
-    "prettier-plugin-svelte": "^3.0.3",
+    "prettier-plugin-svelte": "^3.1.2",
     "smui-theme": "^7.0.0-beta.15",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
     "svelty-picker": "^5.2.0",
     "tslib": "^2.4.1",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
-    "vite": "^4.4.2",
-    "vitest": "^0.34.6",
-    "vitest-environment-firestore-emulator": "^0.0.19"
+    "vite": "^5.0.11",
+    "vitest": "^0.34.6"
   },
   "type": "module"
 }
