--- a/app/package.json
+++ b/app/package.json
@@ -21,36 +21,36 @@
   },
   "devDependencies": {
     "@andybeersdev/element-resize-detector": "^1.0.1",
-    "@faker-js/faker": "^8.3.1",
-    "@firebase/rules-unit-testing": "^3.0.1",
-    "@googlemaps/extended-component-library": "^0.4.3",
+    "@faker-js/faker": "^8.4.1",
+    "@firebase/rules-unit-testing": "^3.0.3",
+    "@googlemaps/extended-component-library": "^0.6.11",
     "@googlemaps/jest-mocks": "^2.21.4",
     "@macfja/svelte-persistent-store": "^2.4.1",
     "@material/typography": "^14.0.0",
-    "@playwright/test": "^1.28.1",
-    "@smui/button": "^7.0.0-beta.15",
-    "@smui/checkbox": "^7.0.0-beta.15",
-    "@smui/chips": "^7.0.0-beta.15",
-    "@smui/dialog": "^7.0.0-beta.15",
-    "@smui/fab": "^7.0.0-beta.15",
-    "@smui/form-field": "^7.0.0-beta.15",
-    "@smui/icon-button": "^7.0.0-beta.15",
-    "@smui/list": "^7.0.0-beta.15",
-    "@smui/menu": "^7.0.0-beta.15",
-    "@smui/menu-surface": "^7.0.0-beta.15",
-    "@smui/slider": "^7.0.0-beta.15",
-    "@smui/tab": "^7.0.0-beta.15",
-    "@smui/tab-bar": "^7.0.0-beta.15",
-    "@smui/top-app-bar": "^7.0.0-beta.15",
-    "@sveltejs/adapter-auto": "^3.1.0",
+    "@playwright/test": "^1.44.1",
+    "@smui/button": "^7.0.0",
+    "@smui/checkbox": "^7.0.0",
+    "@smui/chips": "^7.0.0",
+    "@smui/dialog": "^7.0.0",
+    "@smui/fab": "^7.0.0",
+    "@smui/form-field": "^7.0.0",
+    "@smui/icon-button": "^7.0.0",
+    "@smui/list": "^7.0.0",
+    "@smui/menu": "^7.0.0",
+    "@smui/menu-surface": "^7.0.0",
+    "@smui/slider": "^7.0.0",
+    "@smui/tab": "^7.0.0",
+    "@smui/tab-bar": "^7.0.0",
+    "@smui/top-app-bar": "^7.0.0",
+    "@sveltejs/adapter-auto": "^3.2.1",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.3.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@types/element-resize-detector": "^1.1.5",
-    "@types/google.maps": "^3.54.10",
-    "@types/jsdom": "^21.1.6",
-    "@types/luxon": "^3.3.3",
-    "@types/uuid": "^9.0.6",
+    "@types/google.maps": "^3.55.9",
+    "@types/jsdom": "^21.1.7",
+    "@types/luxon": "^3.4.2",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "app-root-path": "^3.1.0",
@@ -59,19 +59,19 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-svelte": "^2.30.0",
     "firebase": "^10.7.1",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.2.0",
     "luxon": "^3.4.3",
     "p-wait-for": "^5.0.2",
     "prettier": "^3.0.3",
     "prettier-plugin-svelte": "^3.1.2",
-    "smui-theme": "^7.0.0-beta.15",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "svelty-picker": "^5.2.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.3.3",
+    "smui-theme": "^7.0.0",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.0",
+    "svelty-picker": "^5.2.9",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
-    "vite": "^5.0.11",
+    "vite": "^5.2.13",
     "vitest": "^0.34.6"
   },
   "type": "module"
