--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "my-touring-links",
   "version": "1.0.0",
   "description": "My Touring Links",
-  "private": true,
-  "workspaces": [
-    "app"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/its-succ/my-touring-links.git"
@@ -17,9 +13,80 @@
   },
   "homepage": "https://github.com/its-succ/my-touring-links#readme",
   "scripts": {
-    "firebase": "firebase"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "firebase": "firebase",
+    "format": "prettier --plugin-search-dir . --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest",
+    "test:firestore": "firebase emulators:exec --only firestore 'vitest run'",
+    "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
+    "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
-    "firebase-tools": "^13.11.4"
-  }
+    "@andybeersdev/element-resize-detector": "^1.0.1",
+    "@faker-js/faker": "^8.4.1",
+    "@firebase/rules-unit-testing": "^3.0.3",
+    "@googlemaps/extended-component-library": "^0.6.11",
+    "@googlemaps/jest-mocks": "^2.21.4",
+    "@macfja/svelte-persistent-store": "^2.4.1",
+    "@material/typography": "^14.0.0",
+    "@playwright/test": "^1.45.3",
+    "@smui/button": "^7.0.0",
+    "@smui/checkbox": "^7.0.0",
+    "@smui/chips": "^7.0.0",
+    "@smui/data-table": "^7.0.0",
+    "@smui/dialog": "^7.0.0",
+    "@smui/fab": "^7.0.0",
+    "@smui/form-field": "^7.0.0",
+    "@smui/icon-button": "^7.0.0",
+    "@smui/list": "^7.0.0",
+    "@smui/menu": "^7.0.0",
+    "@smui/menu-surface": "^7.0.0",
+    "@smui/segmented-button": "^7.0.0",
+    "@smui/slider": "^7.0.0",
+    "@smui/tab": "^7.0.0",
+    "@smui/tab-bar": "^7.0.0",
+    "@smui/textfield": "^7.0.0",
+    "@smui/top-app-bar": "^7.0.0",
+    "@smui/touch-target": "^7.0.0",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/adapter-static": "^3.0.2",
+    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@types/element-resize-detector": "^1.1.5",
+    "@types/google.maps": "^3.55.11",
+    "@types/jsdom": "^21.1.7",
+    "@types/luxon": "^3.4.2",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "app-root-path": "^3.1.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-svelte": "^2.41.0",
+    "firebase": "^10.7.1",
+    "jsdom": "^23.2.0",
+    "luxon": "^3.4.3",
+    "p-wait-for": "^5.0.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.5",
+    "smui-theme": "^7.0.0",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.8.0",
+    "svelty-picker": "^5.2.9",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "uuid": "^9.0.1",
+    "vite": "^5.2.14",
+    "vitest": "^0.34.6"
+  },
+  "type": "module"
 }
