--- a/firebase.json
+++ b/firebase.json
@@ -5,11 +5,7 @@
   },
   "hosting": {
     "public": "app/build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "emulators": {
     "singleProjectMode": true,
