--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/its-succ/my-touring-links#readme",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "NODE_ENV=development vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
@@ -26,7 +26,8 @@
     "test:firestore": "firebase emulators:exec --only firestore 'vitest run'",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
-    "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
+    "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
+    "firestore": "gcloud emulators firestore start --host-port=localhost:8999"
   },
   "devDependencies": {
     "@andybeersdev/element-resize-detector": "^1.0.1",
@@ -76,6 +77,7 @@
     "p-wait-for": "^5.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.5",
+    "remove-undefined-objects": "^6.0.0",
     "smui-theme": "^7.0.0",
     "svelte": "^4.2.19",
     "svelte-check": "^3.8.0",
@@ -84,12 +86,16 @@
     "typescript": "^5.5.3",
     "uuid": "^9.0.1",
     "vite": "^5.2.14",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "zocker": "^2.0.3"
   },
   "type": "module",
   "dependencies": {
     "@auth/core": "^0.39.1",
     "@auth/sveltekit": "^1.9.2",
-    "dotenv": "^16.5.0"
+    "@google-cloud/firestore": "^7.11.1",
+    "dotenv": "^16.5.0",
+    "http-status": "^2.1.0",
+    "zod": "^3.25.67"
   }
 }
