impl save and share with compressed

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
-    "firestore": "gcloud emulators firestore start --host-port=localhost:8999"
+    "firestore": "gcloud emulators firestore start --project=my-touring-links --host-port=localhost:8999"
   },
   "devDependencies": {
     "@andybeersdev/element-resize-detector": "^1.0.1",
@@ -98,6 +98,7 @@
     "copy-to-clipboard": "^3.3.3",
     "dotenv": "^16.5.0",
     "http-status": "^2.1.0",
+    "superjson": "^2.2.2",
     "zod": "^3.25.67"
   }
 }
